--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Vasundhara Gautam <vasundhara131719@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.7.10"
+python = "^3.7.10"
 Flask = "^1.1.2"
 gunicorn = "^20.0.4"
 
