--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["Vasundhara Gautam <vasundhara131719@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.7.11" # this needs to be an exact pin because of the heroku poetry buildpack
+# this needs to be an exact pin because of the heroku poetry buildpack
+python = "3.7.11"
 Flask = "^1.1.2"
 gunicorn = "^20.0.4"
 
