--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
     hooks:
       - id: reorder-python-imports
         args: [--py37-plus]
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v7.32.0" # Use the sha / tag you want to point at
+    hooks:
+      - id: eslint
