--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   linter: talkiq/linter@1
   heroku: circleci/heroku@1.2.6
+  node: circleci/node@4.7
 
 jobs:
   deploy:
@@ -20,6 +21,9 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - node/run:
+          npm-run: build
+          name: build-site
       - deploy:
           context: heroku-global
           filters:
@@ -27,3 +31,4 @@ workflows:
               only: /main/
           requires:
             - linter/pre-commit
+            - build-site
