--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is the code for my personal website, currently built and deployed with GitHub Pages at [vasundharagautam.com](https://vasundharagautam.com) The name of this repository ([vgautam.github.io](vgautam.github.io)) redirects to the same page.",
   "main": "index.js",
   "scripts": {
+    "build": "eleventy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
