--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vgautam/website#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "luxon": "^2.0.2"
   }
 }
