--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
     "eslint": "^7.32.0",
-    "luxon": "^2.0.2"
+    "luxon": "^2.0.2",
+    "markdown-it-anchor": "^8.3.1",
+    "markdown-it-toc-done-right": "^4.2.0"
   }
 }
