--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
     "eslint": "^7.32.0",
+    "jsdom": "^17.0.0",
     "luxon": "^2.0.2",
     "markdown-it-anchor": "^8.3.1",
     "markdown-it-toc-done-right": "^4.2.0"
