--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
+    "clean-css": "^5.2.1",
     "eslint": "^7.32.0",
     "jsdom": "^17.0.0",
     "luxon": "^2.0.2",
