--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsdom": "^17.0.0",
     "luxon": "^2.0.2",
     "markdown-it-anchor": "^8.3.1",
-    "markdown-it-toc-done-right": "^4.2.0"
+    "markdown-it-toc-done-right": "^4.2.0",
+    "terser": "^5.9.0"
   }
 }
