--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
     "clean-css": "^5.2.1",
     "eslint": "^7.32.0",
-    "jsdom": "^17.0.0",
+    "linkedom": "^0.13.0",
     "luxon": "^2.0.2",
     "markdown-it-anchor": "^8.3.1",
     "markdown-it-toc-done-right": "^4.2.0",
