specify node version for CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,5 +12,6 @@ workflows:
             tags:
               only: /.*/
       - node/run:
+          version: 16.6.2
           npm-run: build
           name: build-site
