--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.2",
+    "@netlify/plugin-a11y": "^1.0.0-alpha.4",
     "clean-css": "^5.2.1",
     "eslint": "^7.32.0",
     "linkedom": "^0.13.0",
