--- a/netlify.toml
+++ b/netlify.toml
@@ -25,8 +25,10 @@ package = "netlify-plugin-checklinks"
   ]
   recursive = true
   pretty = true
-  # we can change this later
-  checkExternal = false
+  checkExternal = true
+  skipPatterns = [
+    "dl.acm.org/doi/"
+  ]
 
 [[plugins]]
   package = "@netlify/plugin-a11y"
