--- a/netlify.toml
+++ b/netlify.toml
@@ -35,3 +35,11 @@ package = "netlify-plugin-checklinks"
   [plugins.inputs]
     failWithIssues = false
     wcagLevel = 'WCAG2AAA'
+
+[[plugins]]
+  package = "@netlify/plugin-lighthouse"
+
+  [plugins.inputs.thresholds]
+    accessibility = 1
+    best-practices = 1
+    seo = 0.96
