--- a/netlify.toml
+++ b/netlify.toml
@@ -50,3 +50,6 @@ package = "netlify-plugin-checklinks"
     accessibility = 1
     best-practices = 1
     seo = 0.96
+
+[[plugins]]
+package = "netlify-plugin-no-more-404"
