--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "website",
   "version": "1.0.0",
-  "description": "This is the code for my personal website, currently built and deployed with GitHub Pages at [vasundharagautam.com](https://vasundharagautam.com) The name of this repository ([vgautam.github.io](vgautam.github.io)) redirects to the same page.",
+  "description": "Code for my personal website",
   "main": "index.js",
   "scripts": {
     "build": "eleventy",
