--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "markdown-it-anchor": "^8.3.1",
     "markdown-it-toc-done-right": "^4.2.0",
     "terser": "^5.14.2"
+  },
+  "dependencies": {
+    "markdown-it-footnote": "^3.0.3"
   }
 }
